Fixed image paths

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 <body>
     <div class="head">
         <h1>Pranali's Cookbook</h1>
-        <img src="/PranaliCookbook/logo.jpeg" height="180px" alt="My test image" />
+        <img src="logo.jpeg" height="180px" alt="My test image" />
     </div>
     <nav>
         <ul>
