--- a/recipe.html
+++ b/recipe.html
@@ -9,7 +9,7 @@
 <body>
     <div class="head">
         <h1>Pranali's Cookbook</h1>
-        <img src="/PranaliCookbook/logo.jpeg" height="180px" alt="My test image" />
+        <img src="logo.jpeg" height="180px" alt="My test image" />
       </div>
       <nav>
         <ul>
@@ -23,7 +23,7 @@
       <div class="container"> 
     <h1>Paneer Butter Masala Recipe</h1>
 
-  <img src="/PranaliCookbook/paneer-butter-masala.webp" alt="Paneer Butter Masala Image">
+  <img src="paneer-butter-masala.webp" alt="Paneer Butter Masala Image" width="600" height="400">
 
   <section>
     <h2>Ingredients:</h2>
@@ -71,10 +71,8 @@
     <h1>Chicken Tikka Recipe</h1>
   </header>
 
-  <img src="chicken-tikka-masala.jpg" alt="Chicken Tikka Image">
-  <img src="original-image.jpg" alt="Reduced Image" width="200" height="100">
-
-
+  <img src="chicken-tikka-masala.jpg" alt="Chicken Tikka Image" width="600" height="400">
+  
   <section>
     <h2>Ingredients:</h2>
     <ul>
