--- a/Contact.html
+++ b/Contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="mystyle.css">
     <title>Contact Form</title>
 </head>
 <body>
     <div class="head">
         <h1>Pranali's Cookbook</h1>
-        <img src="logo.jpeg" height="180px" alt="My test image" />
+        <img src="images/logo.jpeg" height="180px" alt="My test image" />
     </div>
     <nav>
         <ul>
