--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="head">
       <h1>Pranali's Cookbook</h1>
-      <img src="/logo.jpeg" height="180px" alt="My test image" />
+      <img src="images/logo.jpeg" height="180px" alt="My test image" />
     </div>
     <nav>
       <ul>
@@ -38,7 +38,7 @@
 
 
     <div class="img2">
-      <img src="/ingre.jpg" height="200px" alt="My test image" />
+      <img src="images/ingre.jpg" height="200px" alt="My test image" />
     </div>
     <!-- Newsletter Subscription Form -->
     <div class="newsletter">
